<resources>
    <string name="app_name">Digital Portrait</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_user">MainActivityUser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre usuario</string>
    <string name="nav_header_subtitle">correo.usuario@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Inicio</string>
    <string name="send">Enviado</string>
    <string name="receive">Recibido</string>
    <string name="gal">Galeria</string>
    <string name="end">Cerrar Sesión</string>
    <string name="welcome">Bienvenido</string>

</resources>
