<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_send"
            android:title="@string/send" />
        <item
            android:id="@+id/nav_receive"
            android:icon="@drawable/ic_receive"
            android:title="@string/receive" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gal" />

        <item
            android:id="@+id/nav_power"
            android:icon="@drawable/ic_power"
            android:title="@string/end" />

    </group>



</menu>
